# halcyon

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  halcyon  halcyon-release.json  halcyon.cmd  halcyon.ps1
backend/: pyproject.toml
backend/app/: main.py  worker.py
backend/app/api/: deps.py  routes.py
backend/app/core/: config.py  logging.py  timezone.py
backend/app/db/: init_db.py  session.py
backend/app/models/: entities.py
backend/app/schemas/: common.py
backend/app/services/: app_update.py  auth.py  auth_rate_limit.py  background.py  binaries.py  feed.py  media.py  overrides.py  playback.py  retention.py  scanner.py  subtitles.py  sync.py  utils.py
backend/tests/: test_app_update.py  test_auth.py  test_library.py  test_playback.py  test_retention.py  test_route_security.py  test_sync.py  test_watch_state.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: AppShell.tsx  AvatarImage.tsx  CollectionCard.tsx  EmptyState.tsx  HalcyonPlayer.tsx  LinkifiedText.tsx  MetadataEditorModal.tsx  Modal.tsx  PageSkeletons.tsx  PlaylistCreateModal.tsx  SectionGrid.tsx  SyncReviewPanel.tsx  ToastHost.tsx  VideoRail.tsx
frontend/src/hooks/: useAsyncData.ts
frontend/src/lib/: format.ts  notifications.ts  playbackContext.ts
frontend/src/pages/: AdminSetupPage.tsx  AuthPage.tsx  ChannelDetailPage.tsx  ChannelsPage.tsx  HomePage.tsx  LibraryPage.tsx  (+12 more)
whisper-sidecar/: Dockerfile  app.py  requirements.txt
