[project]
name = "halcyon-backend"
version = "1.1.26.post412001"
description = "halcyon self-hosted offline YouTube-style media server backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
  "sqlalchemy>=2.0.38,<3.0.0",
  "psycopg[binary]>=3.2.6,<4.0.0",
  "pydantic-settings>=2.8.1,<3.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
  "orjson>=3.10.15,<4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5,<9.0.0",
]

[build-system]
requires = ["setuptools>=75.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["data/*.txt"]
